# atroplex

./: .clang-format  .cmake-format.yaml  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  TODO.md  absorption_rules.txt
.github/workflows/: build-docker.yml  build.yml  ci.yml
dev/: gcc14-dev.Dockerfile
include/: alignment.hpp  analysis_report.hpp  bam_reader.hpp  base.hpp  build_bam.hpp  build_gff.hpp  build_summary.hpp  builder.hpp  config.hpp.in  data.hpp  file_entries.hpp  file_reader.hpp  filetype_detector.hpp  genogrove_builder.hpp  genomic_feature.hpp  gff_reader.hpp  graph_structure.hpp  gtf_writer.hpp  index_stats.hpp  quant_sidecar.hpp  read_cluster.hpp  sample_info.hpp  sample_manifest.hpp  segment_builder.hpp  segment_identifier.hpp  sequence_variant.hpp  splicing_catalog.hpp  transcript_graph.hpp  transcript_matcher.hpp  utility.hpp
include/subcall/: analyze.hpp  build.hpp  compact.hpp  discover.hpp  dtu.hpp  export_gtf.hpp  inspect.hpp  query.hpp  subcall.hpp
scripts/: inject_expression.py
scripts/visualization/: atroplex_viz.yml  visualize_sqanti3.R
src/: alignment.cpp  analysis_report.cpp  bam_reader.cpp  base.cpp  build_bam.cpp  build_gff.cpp  build_summary.cpp  builder.cpp  filetype_detector.cpp  genomic_feature.cpp  gff_reader.cpp  gtf_writer.cpp  index_stats.cpp  main.cpp  quant_sidecar.cpp  read_cluster.cpp  sample_manifest.cpp  segment_builder.cpp  splicing_catalog.cpp  transcript_matcher.cpp  utility.cpp
src/subcall/: analyze.cpp  build.cpp  compact.cpp  discover.cpp  dtu.cpp  export_gtf.cpp  inspect.cpp  query.cpp  subcall.cpp
tests/: CMakeLists.txt  grove_walk.hpp
tests/compact/: CMakeLists.txt  compact_test.cpp
tests/discover/: CMakeLists.txt  sqanti_category_test.cpp
tests/discover/fixtures/: query_reads.sam  reference_transcripts.gtf
tests/export/: CMakeLists.txt  export_reparse_test.cpp
tests/inspect/: CMakeLists.txt  conserved_threshold_test.cpp
tests/query/: CMakeLists.txt  query_classification_test.cpp
tests/query/fixtures/: query_transcripts.gtf  sample.gtf
